# scriba

./: .gitignore  .mocha.setup.js  .mocharc.js  .npmignore  .prettierignore  Cargo.toml  LICENSE  index.d.ts  index.js  package-lock.json  package.json
.cargo/: config
.github/workflows/: tests.yaml
lib/: _apply_decs_2203_r.js  _construct_jobject.js  reflection.js
src/: err.rs  lib.rs
src/parser/: mod.rs  program.rs  sourcemap.rs  util.rs
src/parser/transformers/: anonymous_expr.rs  class_define_fields.rs  class_jobject.rs  class_reflection_decorators.rs  decorator_2022_03.rs  lazy_object_construction.rs  mod.rs  optional_import.rs  remove_assert_calls.rs  resolve_self_identifiers.rs  static_blocks.rs  wrap_in_function.rs
src/reflection/: mod.rs
src/stack/: mod.rs  trace.rs
src/testing/: inject_helpers.rs  mod.rs  uuid.rs
src/wasm/: compile.rs  mod.rs  reflection.rs  stack_trace.rs
tests/decorators/2022-03-metadata/class/: exec.js
tests/decorators/2022-03-metadata/element/: exec.js
tests/decorators/2022-03-metadata/subclass-no-super-decorators/: exec.js
tests/decorators/2022-03-metadata/subclass-super-decorators/: exec.js
tests/decorators/2022-03-parameter/constructor/: exec.js
tests/decorators/2022-03-parameter/method/: exec.js
tests/decorators/2022-03-parameter/method-computed-key-do-not-call-twice/: exec.js
tests/decorators/2022-03-parameter/method-with-computed-key/: exec.js
tests/wasm/: debug.js  exports.js  parser.js  reflection.js  stack.js
