[package]
name = "jymfony-compiler"
description = "Jymfony compiler"
repository = "https://github.com/jymfony/compiler.git"
license = "MIT"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
simd = []

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
base64 = "0.21.4"
getrandom = { version = "0.2.10", features = ["js"] }
js-sys = "0.3"
lazy_static = "1.4.0"
moka = { version = "0.12.1", features = ["js", "sync"] }
rand = "0.8.5"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
sourcemap = "6.4.1"
swc_atoms = "0.6.0"
swc_cached = "0.3.18"
swc_common = { version = "0.33.0", features = ["anyhow", "sourcemap"] }
swc_ecma_ast = { version = "0.110.0", features = ["default", "serde"] }
swc_ecma_codegen = "0.146.1"
swc_ecma_parser = "0.141.1"
swc_ecma_transforms_base = "0.134.3"
swc_ecma_transforms_compat = "0.160.4"
swc_ecma_transforms_module = "0.177.4"
swc_ecma_transforms_proposal = "0.168.6"
swc_ecma_transforms_typescript = "0.185.4"
swc_ecma_visit = "0.96.0"
swc_ecma_utils = "0.124.3"
url = "2.4"
uuid = { version = "1.5.0", features = ["v4"] }
uuid-simd = "0.8.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-derive = "0.2"

[dev-dependencies]
ansi_term = "0.12.1"
hex = "0.4.3"
sha1 = "0.10.6"
swc_ecma_transforms_testing = "0.137.4"
tempfile = "3.8.0"
testing = "0.35.0"
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
